# kedro-failing-params

./: README.md  pyproject.toml
conf/base/: parameters.yml  parameters_test_pipeline.yml
src/test_parser/: __init__.py  __main__.py  settings.py
src/test_parser/pipelines/test_pipeline/: __init__.py  nodes.py  pipeline.py
src/tests/pipelines/test_pipeline/: test_pipeline.py
