[build-system]
requires = [ "setuptools",]
build-backend = "setuptools.build_meta"

[project]
name = "test_parser"
readme = "README.md"
dynamic = [ "dependencies", "version",]

[project.scripts]
test-parser = "test_parser.__main__:main"

[tool.kedro]
package_name = "test_parser"
project_name = "test-parser"
kedro_init_version = "0.19.2"
tools = [ "None",]
example_pipeline = "False"
source_dir = "src"

[project.entry-points."kedro.hooks"]

[tool.setuptools.dynamic.dependencies]
file = "requirements.txt"

[tool.setuptools.dynamic.version]
attr = "test_parser.__version__"

[tool.setuptools.packages.find]
where = [ "src",]
namespaces = false
